fix: svg logo bug and no university logos on mobile

--- a/website/static/home_style.css
+++ b/website/static/home_style.css
@@ -191,4 +191,8 @@ canvas#canvas {
     .thumbnail{
         display: None;
     }
+
+    .university-logos{
+        display: None;
+    }
 }
